--- a/MockProject-ReactJS/src/index.css
+++ b/MockProject-ReactJS/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.rdp-dropdown {
+  @apply w-[100px] text-center;
+}
+.rdp-dropdown option {
+  @apply h-[20px] text-black;
+}
