--- a/MockProject-ReactJS/src/index.css
+++ b/MockProject-ReactJS/src/index.css
@@ -8,3 +8,6 @@
 .rdp-dropdown option {
   @apply h-[20px] text-black;
 }
+.supervisor-table .ant-table-thead tr th {
+  @apply !bg-primary-color;
+}
